--- a/index.html
+++ b/index.html
@@ -14,22 +14,25 @@
       </div>
       <div class="weather">
         <img src="images/rain.png" class="weather-icon" />
-        <h1 class="temp">21°C</h1>
+        <h1 class="temp">21 °C</h1>
         <h2 class="city">Brasilia</h2>
         <div class="details">
           <div class="col">
-            <img src="images/humidity.png" />
-            <p class="humidity">Umidade</p>
-          </div>
-          <div class="col">
-            <img src="images/wind.png" />
+            <img src="images/humidity.png">
             <div>
-              <p class="wind">40 km/h</p>
-              <p>Velocidade</p>
-            </div>
+              <p class="humidity">50%</p>
+              <p>Umidade</p>
           </div>
         </div>
+        <div class="col">
+          <img src="images/wind.png">
+          <div>
+            <p class="wind">45 km/h</p>
+            <p>Velocidade do vento</p>
+        </div>
+      </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
